--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-bb-generate",
   "description": "Grunt plugin that scaffold backbone generators. It follows the DFGIMW mantra (don't fucking get in my way). It aims at be easily modifiable to fit any architecture being backbone or others.",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "homepage": "https://github.com/cedricdugas/bb-generate",
   "author": {
     "name": "Cedric Dugas",
@@ -37,6 +37,6 @@
     "grunt": "~0.4.0"
   },
   "keywords": [
-    "gruntplugin"
+    "backbone,generators,scaffold,scaffolding"
   ]
 }
