--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "grunt": ">=0.4.0"
   },
   "keywords": [
-    "backbone,marionette,generators,scaffold,scaffolding"
+    "backbone,marionette,generators,scaffold,scaffolding,gruntplugin"
   ]
 }
