--- a/package.json
+++ b/package.json
@@ -28,10 +28,16 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt": "~0.4.1"
+    "grunt-contrib-jshint": "^0.1.1",
+    "grunt-contrib-clean": "^0.4.1",
+    "grunt-contrib-nodeunit": "^0.1.2",
+    "jit-grunt": "^0.3.2",
+    "time-grunt": "^0.2.10",
+    "load-grunt-tasks": "^0.4.0",
+    "load-grunt-configs": "^0.3.2",
+    "grunt-generate-configs": "^0.5.0",
+    "jshint-stylish": "^0.1.5",
+    "chai": "^1.9.1"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
@@ -42,5 +48,12 @@
     "generators",
     "scaffold",
     "gruntplugin"
-  ]
+  ],
+  "dependencies": {
+    "grunt-contrib-clean": "^0.4.1",
+    "grunt-contrib-jshint": "^0.1.1",
+    "grunt-contrib-nodeunit": "^0.1.2",
+    "glob": "^3.2.9",
+    "underscore.string": "^2.3.3"
+  }
 }
