--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gruntfile"
   ],
   "dependencies": {
+    "underscore": "^1.6.0",
     "underscore.string": "^2.3.3",
     "inquirer": "^0.4.1"
   }
