--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "gruntfile"
   ],
   "dependencies": {
-    "underscore": "^1.6.0",
     "underscore.string": "^2.3.3",
-    "inquirer": "^0.4.1"
+    "inquirer": "^0.4.1",
+    "lodash": "^2.4.1"
   }
 }
